--- a/res/xml/dot_statusbar.xml
+++ b/res/xml/dot_statusbar.xml
@@ -9,6 +9,11 @@
         android:entryValues="@array/status_bar_quick_qs_pulldown_values"
         android:defaultValue="0" />
 
+    <PreferenceScreen
+            android:key="network_traffic_state"
+            android:fragment="com.dotos.dotextras.fragments.NetworkTraffic"
+            android:title="@string/network_traffic_title" />
+
     <PreferenceCategory
         android:title="@string/status_bar_icons_title">
 
