--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -4,4 +4,12 @@
     <attr name="textColorTitles" format="color"/>
     <attr name="mainBackgroundColor" format="color"/>
     <attr name="mainTitleColor" format="color"/>
+
+    <!-- Base attributes available to SeekBarPreference. -->
+    <declare-styleable name="SeekBarPreference">
+        <attr name="interval" format="integer" />
+        <attr name="min" format="integer" />
+        <attr name="max" format="integer" />
+        <attr name="units" format="string|reference" />
+    </declare-styleable>
 </resources>
