--- a/res/drawable/ic_dot_notification.xml
+++ b/res/drawable/ic_dot_notification.xml
@@ -1,3 +1,15 @@
+<!-- 
+     Copyright (C) 2017 dotos Project
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+          http://www.apache.org/licenses/LICENSE-2.0
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
     android:width="24dp"
@@ -5,3 +17,18 @@
     android:viewportHeight="24">
     <path android:fillColor="?android:attr/colorAccent" android:pathData="M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M13,13V7H11V13H13M13,17V15H11V17H13Z" />
 </vector>
+<?xml version="1.0" encoding="utf-8"?>
+
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:title="@string/notifications_panel_category"
+    android:layout="@layout/tab"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+
+         <PreferenceScreen
+            android:key="dot_notifications"
+            android:fragment="com.dotos.dotextras.Notifications"
+            android:layout="@layout/preference_notifications"
+            android:title="@string/notifications_title" />
+
+</PreferenceScreen>
