--- a/res/menu/layout_main_drawer.xml
+++ b/res/menu/layout_main_drawer.xml
@@ -36,17 +36,21 @@
                 android:icon="@drawable/ic_dot_statusbar"
                 android:id="@+id/nav_dot_statusbar" />
             <item
+                android:title="@string/quicksettings"
+                android:icon="@drawable/ic_dot_qs"
+                android:id="@+id/nav_dot_quicksettings" />
+            <item
                 android:title="@string/buttons"
                 android:icon="@drawable/ic_dot_buttons"
                 android:id="@+id/nav_dot_buttons" />
             <item
                 android:title="@string/display"
-				android:visible="false"
+		android:visible="false"
                 android:icon="@drawable/ic_dot_display"
                 android:id="@+id/nav_dot_display" />
             <item
                 android:title="@string/lockscreen"
-				android:visible="false"
+		android:visible="false"
                 android:icon="@drawable/ic_dot_lockscreen"
                 android:id="@+id/nav_dot_lockscreen" />
             <item
@@ -55,17 +59,17 @@
                 android:id="@+id/nav_dot_recents" />
             <item
                 android:title="@string/misc"
-				android:visible="false"
+		android:visible="false"
                 android:icon="@drawable/ic_dot_misc"
                 android:id="@+id/nav_dot_misc" />
             <item
                 android:title="@string/powermenu"
-				android:visible="false"
+		android:visible="false"
                 android:icon="@drawable/ic_dot_powermenu"
                 android:id="@+id/nav_dot_powermenu" />
             <item
                 android:title="@string/navigationbar"
-				android:visible="false"
+		android:visible="false"
                 android:icon="@drawable/ic_dot_navbar"
                 android:id="@+id/nav_dot_navbar" />
         </menu>
